# TrendPulseNew

./: .gitignore  AGENTS.md  GROK_API_INTEGRATION_REPORT.md  README.md
backend/: .env.example  pyproject.toml
backend/src/: __init__.py  main.py
backend/src/adapters/: __init__.py  base.py  llm_adapter.py  reddit_adapter.py  x_adapter.py  youtube_adapter.py
backend/src/api/: router.py
backend/src/api/endpoints/: analysis.py  settings.py  subscriptions.py  tasks.py  (+1 more)
backend/src/common/: __init__.py  language_utils.py  time_utils.py
backend/src/config/: settings.py
backend/src/models/: database.py  schemas.py
backend/src/services/: analyzer_service.py  app_settings_service.py  collector_service.py  scheduler_service.py  search_query_service.py  source_availability_service.py  source_runtime_control.py  subscription_service.py  task_service.py
backend/tests/: conftest.py  test_cleanup.py  test_dev_android_script.py  test_grok_config_guardrails.py  test_verify_critical_paths_script.py
backend/tests/test_adapters/: test_adapters.py
backend/tests/test_api/: helpers.py  test_endpoints.py  test_notification_settings_endpoints.py  test_subscription_alert_endpoints.py  test_subscription_defaults_endpoints.py  test_subscription_mutation_endpoints.py  test_task_creation_endpoints.py  test_task_read_endpoints.py
backend/tests/test_common/: test_time_utils.py
backend/tests/test_services/: test_analyzer.py  test_collector.py  test_scheduler_service.py  test_search_query_service.py  test_source_runtime_control.py  test_subscription_service.py  test_task_service.py
(+138 files in other folders)
